# fin-vantage-scout

./: .env.example  .gitignore  README.md  config.py  fix_ui.py  pyproject.toml
backend/: app.py
backend/agents/: step1a_fundamentals_agent.py  step1b_momentum_agent.py  step1c_news_agent.py  step1c_technical_agent.py  step1d_earnings_quality_agent.py  step1e_valuation_agent.py  step1f_moat_agent.py  step1g_news_agent.py  step2_synthesis_agent.py
backend/data/: alpha_vantage.py  market_data.py  universe.py
backend/prompts/: news_prompt.py  synthesis_prompt.py
frontend/: streamlit_app.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
tests/: evaluate_momentum_signal.py
