[project]
name = "fin-vantage-scout"
version = "0.1.0"
description = "A lean multi-agent equity screener — portfolio/educational project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-ollama>=0.1.0",
    "yfinance>=0.2.40",
    "duckduckgo-search>=6.1.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.0",
    "ddgs>=9.14.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Implicit namespace packages — no __init__.py files needed
packages = ["backend", "frontend", "tests"]
